# BitTorrentClient

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bdecoder.cpp.02A2191C792BB5ED.idx  bdecoder.cpp.4808D9DF79213EB4.idx  bdecoder.h.08EC41D0252A9B70.idx  bdecoder.h.F47F5B7D8E931915.idx  main.cpp.07A04617557BB25D.idx  main.cpp.34657056D48657CC.idx  metainfo.cpp.46231F5F306D25E3.idx
include/: bdecoder.h  globals.h  metainfo.h  torrent.h
src/: bdecoder.cpp  main.cpp  metainfo.cpp
